--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="wrapper">
 
             <div class="input-box">
-                <input type="text" value="fndjkfk458-[];dwjhdb" disabled>
+                <input type="text" disabled>
                 <span class="material-symbols-rounded"><i class='bx bx-copy'></i></span>
             </div>
 
@@ -35,7 +35,7 @@
                     <span>15</span>
                 </div>
 
-                <input type="range" min="1" max="30" step="1">
+                <input type="range" min="1" value="15" max="30" step="1">
             </div>
 
             <div class="pass-settings">
@@ -43,7 +43,7 @@
                 <ul class="options">
 
                     <li class="option">
-                        <input type="checkbox" id="lowercase">
+                        <input type="checkbox" id="lowercase" checked>
                         <label for="lowercase">Lowercase (a-z)</label>
                     </li>
 
@@ -80,6 +80,8 @@
         </div>
     </div>
 
+
+    <!-- SCRIPT FILE FOR JAVASCRIPT -->
     <script src="main.js"></script>
 
 </body>
